Fix minor shifting at a very specific screen width by using the lowest common height for screenshot and iframe

--- a/client/my-sites/themes/auto-loading-homepage-modal.scss
+++ b/client/my-sites/themes/auto-loading-homepage-modal.scss
@@ -76,7 +76,7 @@
 		.themes__iframe-wrapper {
 			display: block;
 			height: 100%;
-			max-height: 250px;
+			max-height: 235px;
 		}
 
 		.form-label {
